fix CrashLoopBackOff
